--- a/index.html
+++ b/index.html
@@ -7,14 +7,13 @@
     <meta name="description" content="Track your expenses with Google Sheets" />
     <meta name="author" content="SheetWise" />
 
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    
     <meta property="og:title" content="SheetWise - Expense Tracker" />
     <meta property="og:description" content="Track your expenses with Google Sheets" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     
     <!-- Google Identity Services -->
     <script src="https://accounts.google.com/gsi/client" async defer></script>
